# blog-hakyll-netlify

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.base  I18n.hs  README.md  _redirects  blog-hakyll-netlify.cabal  blog.cabal  hakyll-netlify-blog.cabal  harfangk-netlify-com.cabal  package.yaml  process_post.rb  site.hs  stack.yaml
.circleci/: config.yml
.github/workflows/: blog_ci.yaml  build-base-image.yaml
.netlify/: state.json
about/: en.md  ko.md
css/: _base.scss  _layout.scss  _syntax-highlighting.scss  main.scss
drafts/: 2018-01-01-base-template.md  2018-01-20-elm-record-and-union-type.md  2018-01-27-elm-writing-fuzz-test.md  2018-02-02-elm-worse-programmer-for-the-better.md  2018-11-17-elm-gpl-dsl.md  2019-01-04-complexity-mismatch.md  2019-01-04-testing-in-elm.md  2020-01-01-base-template.md  2020-01-04-leaving-no-program-branch-unturned.md  2020-11-15-designing-for-localization.md  2022-04-01-product-manager-retrospective.md
posts/2016-06-27-why-are-you-learning-computer-science/: en.md  ko.md
posts/2016-07-10-stop-translating-programming-terms/: ko.md
posts/2016-07-20-code-like-you-write/: en.md
posts/2016-09-12-sandi-metzs-advices-for-better-code/: en.md  ko.md
posts/2016-09-19-manage-dotfiles-with-a-git-bare-repository/: en.md  ko.md
posts/2016-09-26-how-to-think-about-technology-stack-as-a-head-of-company/: en.md  ko.md
posts/2016-10-03-using-emmet-to-type-erb-or-eex-tags/: en.md  ko.md
posts/2016-10-10-programming-phoenix-example-code-issues/: en.md  ko.md
templates/: default.html  header.html  index.html  post.html
(+94 files in other folders)
