name               :    harfangk-netlify-com
version            :    0.1.0.0
homepage           :    harfangk.netlify.com
license            :    OtherLicense
author             :    Bonghyun Kim
copyright          :    2018 Bonghyun Kim
category           :    Web
build-type         :    Simple
cabal-version      :    >=1.10

executable site
    main-is          :  site.hs
    default-language :  Haskell2010
    build-depends    :  base,
                        hakyll,
                        filepath,
                        containers,
                        directory
